--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "resas_spa",
+  "homepage": "https://bisco16.github.io/resas_spa/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,7 +24,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "rm": "rm -rf docs",
+    "mv": "mv build docs",
+    "git": "git add . && git commit && git push origin master",
+    "deploy": "npm run rm && npm run build && npm run mv && npm run git"
   },
   "eslintConfig": {
     "extends": [
